# ojo

./: .gitignore  CHANGELOG.md  Cargo.toml  DEPLOYMENT.md  README.md  linux.yaml  ojo.yaml  otel.yaml  run_otel_collector.sh  windows.yaml
.cargo/: config.toml
.github/workflows/: ci.yml  quality.yml
crates/host-collectors/: Cargo.toml  README.md
crates/host-collectors/src/: lib.rs  tests.rs
docker.dev/: almalinux-6.Dockerfile  almalinux-7.Dockerfile  almalinux-8.Dockerfile  almalinux-9.Dockerfile  centos-7.Dockerfile  centos-8.Dockerfile  centos-9.Dockerfile  docker-compose.yml  fedora-36.Dockerfile  fedora-40.Dockerfile  rocky-8.Dockerfile  rocky-9.Dockerfile  ubuntu-1804.Dockerfile  ubuntu-2004.Dockerfile  ubuntu-2204.Dockerfile  ubuntu-2404.Dockerfile
grafana/: docker.json  gpu.json  linux.json  mysql.json  nfs-client.json  nginx.json  ojo.json  postgres.json  redis.json  sensors.json  syslog.json  systemd.json  systrace.json  windows.json
services/docker/: Cargo.toml  README.md  docker.yaml
services/docker/src/: main.rs  tests.rs
services/docker/src/platform/: common.rs  coverage.rs  mod.rs  windows.rs
services/docker/src/tests/: main_tests.rs  platform_common_tests.rs
services/docker/tests/: binary_dump_snapshot.rs
services/gpu/: Cargo.toml  README.md  gpu.yaml
services/gpu/src/: main.rs  tests.rs
services/gpu/src/platform/: common.rs  coverage.rs  linux.rs  mod.rs  windows.rs
services/gpu/src/tests/: main_tests.rs  platform_common_tests.rs
services/gpu/tests/: binary_dump_snapshot.rs
services/mysql/: Cargo.toml  README.md  mysql.yaml
services/mysql/src/: main.rs  tests.rs
services/mysql/src/platform/: common.rs  coverage.rs  linux.rs  mod.rs  windows.rs
services/mysql/src/tests/: main_tests.rs  platform_common_tests.rs
services/mysql/tests/: binary_dump_snapshot.rs
services/nfs-client/: Cargo.toml  README.md  nfs-client.yaml
services/nfs-client/src/: main.rs  tests.rs
services/nfs-client/src/platform/: coverage.rs  linux.rs  mod.rs  unix.rs  windows.rs
services/nfs-client/src/tests/: main_tests.rs  platform_linux_tests.rs
services/nfs-client/tests/: binary_dump_snapshot.rs
services/nginx/: Cargo.toml  README.md  nginx.yaml
services/nginx/src/: main.rs  tests.rs
services/nginx/src/platform/: common.rs  coverage.rs  linux.rs  mod.rs  windows.rs
services/nginx/src/tests/: main_tests.rs  (+1 more)
services/nginx/tests/: binary_dump_snapshot.rs
services/postgres/: Cargo.toml  README.md  postgres.yaml
services/postgres/src/: main.rs  tests.rs
services/postgres/tests/: binary_dump_snapshot.rs
services/redis/: Cargo.toml  README.md  redis.yaml
services/redis/src/: main.rs  tests.rs
services/redis/src/platform/: common.rs  coverage.rs  linux.rs  mod.rs  windows.rs
services/redis/src/tests/: main_tests.rs  platform_common_tests.rs
services/redis/tests/: binary_dump_snapshot.rs
services/sensors/: Cargo.toml  README.md  sensors.yaml
services/sensors/src/: main.rs  tests.rs
services/sensors/src/platform/: coverage.rs  linux.rs  mod.rs  unix.rs  windows.rs
services/sensors/src/platform/unix/: tests.rs
services/sensors/src/tests/: main_tests.rs  platform_linux_tests.rs
services/sensors/tests/: binary_dump_snapshot.rs
services/syslog/: Cargo.toml  README.md  syslog.windows.yaml  syslog.yaml
services/syslog/src/: main.rs
services/syslog/src/platform/: common.rs  coverage.rs  linux.rs  mod.rs  windows.rs
services/syslog/src/tests/: main_tests.rs  platform_tests.rs
services/syslog/tests/: binary_dump_snapshot.rs
services/systemd/: Cargo.toml  README.md  systemd.yaml
services/systemd/src/: main.rs  tests.rs
services/systemd/tests/: binary_dump_snapshot.rs
services/systrace/: Cargo.toml  README.md  systrace.yaml
services/systrace/probes/: README.md  libc.uprobe.profile  network.ebpf.profile  openssl.uprobe.profile  tokio.usdt.profile
services/systrace/src/: main.rs
services/systrace/src/platform/: common.rs  coverage.rs  linux.rs  mod.rs  windows.rs
services/systrace/src/tests/: main_tests.rs  platform_linux_tests.rs  platform_windows_tests.rs
services/systrace/tests/: binary_dump_snapshot.rs
services/systrace/validation/: README.md  dataset-sample.json
solaris-builder/: linker-sparcv9-solaris.sh  linker-x86_64-solaris.sh
solaris-builder/solaris-compat/: xnet7_compat.c
src/: buffers.rs  catalog.rs  collector.rs  config.rs  delta.rs  linuxcollect.rs  main.rs  metrics.rs  model.rs  otel.rs  solarcollect.rs  tiered_queue.rs  view.rs  wincollect.rs
src/linux/: cgroup_collector.rs  collector_impl.rs  collector_impl_coverage.rs  core.rs  disk_net_collector.rs  kernel_net_collector.rs  mounts_cpuinfo_collector.rs  pressure_collector.rs  process_collector.rs  process_status_parser.rs  scheduler_collector.rs  slab_filesystem_collector.rs  snapshot_collector.rs  system_memory_collector.rs
src/metrics/: core.rs  methods_init_and_emit.rs  methods_record_linux_kernel.rs  methods_record_memory_load.rs  methods_record_processes.rs  methods_record_storage_network.rs  methods_record_system.rs  mod.rs  tests.rs
src/solaris/: collector_impl.rs  core.rs  process_collector.rs  snapshot_collector.rs  storage_network_collector.rs  system_memory_collector.rs
src/tests/: buffers_tests.rs  catalog_tests.rs  collector_tests.rs  config_tests.rs  delta_tests.rs  main_tests.rs  otel_tests.rs  tiered_queue_tests.rs
src/windows/: collector_impl.rs  core.rs  mod.rs  network_mount_collector.rs  process_cpu_storage_collector.rs  snapshot_collector.rs  windows_kernel_collector.rs  windows_support_collector.rs
tests/: README.md  binary_dump_snapshot.rs  qa_extension_metric_contracts.rs  qa_extension_services_smoke.rs  qa_json_schema.rs  qa_platform_metric_contracts.rs
tests/qa/: almalinux-6.json  almalinux-7.json  almalinux-8.json  almalinux-9.json  centos-7.json  centos-8.json  centos-9.json  fedora-36.json  fedora-40.json  rocky-8.json  rocky-9.json  ubuntu-1804.json  ubuntu-2004.json  ubuntu-2204.json  ubuntu-2404.json  windows.json
tests/scripts/: qa_sweep.sh  rss_qa.sh  run_container_qa.sh
(+20 files in other folders)
