[package]
name = "ojo"
version = "0.0.2"
edition = "2021"

[workspace]
resolver = "2"
members = [
  ".",
  "crates/host-collectors",
  "services/docker",
  "services/gpu",
  "services/sensors",
  "services/mysql",
  "services/postgres",
  "services/nfs-client",
  "services/redis",
  "services/nginx",
  "services/systemd",
  "services/systrace",
  "services/syslog",
]

[dependencies]
anyhow = "1"
ctrlc = "3"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"
tokio = { version = "1", features = [
  "macros",
  "rt-multi-thread",
  "signal",
  "time",
] }
opentelemetry = { version = "0.31", features = ["metrics", "trace"] }
opentelemetry_sdk = { version = "0.31", features = ["metrics", "trace", "rt-tokio"] }
opentelemetry-otlp = { version = "0.31", features = [
  "metrics",
  "trace",
  "grpc-tonic",
  "http-proto",
  "reqwest-blocking-client",
  "gzip-http",
] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
host-collectors = { path = "crates/host-collectors" }

[target.'cfg(not(target_os = "solaris"))'.dependencies]
reqwest = { version = "0.12", default-features = false, features = [
  "blocking",
  "rustls-tls",
] }

[target.'cfg(target_os = "solaris")'.dependencies]
reqwest = { version = "0.12", default-features = false, features = ["blocking"] }

[target.'cfg(any(target_os = "linux", target_os = "android"))'.dependencies]
procfs = "0.18"
libc = "0.2"


[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.59", features = [
  "Win32_Foundation",

  # networking
  "Win32_NetworkManagement_IpHelper",
  "Win32_NetworkManagement_Ndis",
  "Win32_Networking_WinSock",

  # storage / filesystem
  "Win32_Storage_FileSystem",

  # ioctl
  "Win32_System_Ioctl",

  # required by CreateFileW
  "Win32_Security",

  # system APIs
  "Win32_System_IO",
  "Win32_System_Kernel",
  "Win32_System_ProcessStatus",
  "Win32_System_Registry",
  "Win32_System_SystemInformation",
  "Win32_System_Threading",
  "Win32_System_WindowsProgramming",
] }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage)'] }
