[package]
name = "host-collectors"
version = "0.0.1"
edition = "2021"

[dependencies]
anyhow = "1"
gethostname = "1"
opentelemetry = { version = "0.31", features = ["metrics"] }
opentelemetry_sdk = { version = "0.31", features = ["metrics", "rt-tokio"] }
opentelemetry-otlp = { version = "0.31", features = [
  "metrics",
  "grpc-tonic",
  "http-proto",
  "reqwest-blocking-client",
  "gzip-http",
] }

[target.'cfg(not(target_os = "solaris"))'.dependencies]
reqwest = { version = "0.12", default-features = false, features = [
  "blocking",
  "rustls-tls",
] }

[target.'cfg(target_os = "solaris")'.dependencies]
reqwest = { version = "0.12", default-features = false, features = ["blocking"] }

[dev-dependencies]
tokio = { version = "1", features = ["rt", "rt-multi-thread"] }
