[package]
name = "host-collectors"
version = "0.0.4"
edition = "2021"

[dependencies]
anyhow = "1"
gethostname = "1"
serde_json = "1"
arrow-array = "58"
arrow-schema = "58"
parquet = { version = "58", default-features = false, features = ["arrow", "zstd"] }
opentelemetry = { version = "0.31", features = ["metrics", "trace"] }
opentelemetry_sdk = { version = "0.31", features = ["metrics", "trace", "rt-tokio", "experimental_trace_batch_span_processor_with_async_runtime"] }
opentelemetry-otlp = { version = "0.31", features = [
  "metrics",
  "trace",
  "grpc-tonic",
  "http-proto",
  "reqwest-blocking-client",
  "gzip-http",
] }

[target.'cfg(not(target_os = "solaris"))'.dependencies]
reqwest = { version = "0.12", default-features = false, features = [
  "blocking",
  "rustls-tls",
] }

[target.'cfg(target_os = "solaris")'.dependencies]
reqwest = { version = "0.12", default-features = false, features = ["blocking"] }

[dev-dependencies]
tokio = { version = "1", features = ["rt", "rt-multi-thread"] }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage)'] }
