[package]
name = "ojo-syslog"
version = "0.0.4"
edition = "2021"

[dependencies]
anyhow = "1"
ctrlc = "3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
opentelemetry = { version = "0.31", features = ["metrics"] }
host-collectors = { path = "../../crates/host-collectors" }

[target.'cfg(not(target_os = "solaris"))'.dependencies]
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls", "json"] }

[target.'cfg(target_os = "solaris")'.dependencies]
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json"] }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage)'] }
