[package]
name = "ojo-systrace"
version = "0.0.2"
edition = "2021"

[dependencies]
anyhow = "1"
ctrlc = "3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
opentelemetry = { version = "0.31", features = ["metrics", "trace"] }
libc = "0.2"
host-collectors = { path = "../../crates/host-collectors" }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage)'] }
